--- a/package.json
+++ b/package.json
@@ -3,10 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@types/react": "^16.8.2",
-    "@types/react-dom": "^16.8.0",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "@types/react": "16.8.2",
+    "@types/react-dom": "16.8.0",
+    "events": "3.3.0",
+    "express": "4.17.1",
+    "http": "^0.0.0",
+    "net": "^1.0.2",
+    "querystring": "^0.2.1",
+    "react": "16.8.0",
+    "react-dom": "16.8.0",
+    "string_decoder": "^1.3.0",
+    "url": "^0.11.0",
+    "zlib": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts-ts start",
