--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
+    "body-parser": "^1.19.0",
+    "cors": "2.8.5",
     "events": "3.3.0",
     "express": "4.17.1",
-    "http": "^0.0.0",
+    "http": "0.0.0",
     "net": "1.0.2",
     "querystring": "0.2.1",
     "react": "16.8.0",
